Update and rename readme.md to readme

--- a/mjs/01/readme
+++ b/mjs/01/readme
@@ -8,7 +8,7 @@ Ubuntu 18.04 LTS
 $ vim Makefile
 edit:DOCKER_GCC=gcc
      DOCKER_CLANG=clang
-    $(DOCKER_GCC) /$(CFLAGS) /$(TOP_MJS_SOURCES) $(TOP_COMMON_SOURCES) -o /$(PROG)
+    $(DOCKER_GCC) $(CFLAGS) $(TOP_MJS_SOURCES) $(TOP_COMMON_SOURCES) -o $(PROG)
 // then save
 
 $ make
